--- a/stellar/Scenes/Home/Views/CardView.xib
+++ b/stellar/Scenes/Home/Views/CardView.xib
@@ -46,11 +46,12 @@
                         </label>
                     </subviews>
                 </stackView>
-                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="HJz-Qs-XWA">
+                <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" distribution="fillProportionally" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="HJz-Qs-XWA">
                     <rect key="frame" x="0.0" y="408" width="414" height="64"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="64" id="Tb4-ot-gDE"/>
                     </constraints>
+                    <edgeInsets key="layoutMargins" top="0.0" left="16" bottom="0.0" right="16"/>
                 </stackView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SvM-Ml-4XO" customClass="CardStatusLabel" customModule="stellar" customModuleProvider="target">
                     <rect key="frame" x="356.5" y="16" width="41.5" height="20.5"/>
