--- a/stellar/Scenes/Home/Views/CardView.xib
+++ b/stellar/Scenes/Home/Views/CardView.xib
@@ -46,10 +46,10 @@
                         </label>
                     </subviews>
                 </stackView>
-                <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" distribution="fillProportionally" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="HJz-Qs-XWA">
-                    <rect key="frame" x="0.0" y="408" width="414" height="64"/>
+                <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="HJz-Qs-XWA">
+                    <rect key="frame" x="0.0" y="424" width="414" height="48"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="64" id="Tb4-ot-gDE"/>
+                        <constraint firstAttribute="height" constant="48" id="Tb4-ot-gDE"/>
                     </constraints>
                     <edgeInsets key="layoutMargins" top="0.0" left="16" bottom="0.0" right="16"/>
                 </stackView>
